Users (#2)
* Refactor controller implementation to use classes to encapsulate path validation outside of the router
* Extend base controller
* Swap out mongo adapter for mongoose
* Update the API spec to lookup user by username instead of id (because mongo)
* Complete CRUD ops on users
