# openapi/v1.yaml
@@ -83,15 +83,15 @@ paths:
               schema:
                 $ref: '#/components/schemas/User'
 
-  /users/{userId}:
+  /users/{username}:
     get:
-      summary: Get a user by ID
-      operationId: getUserById
+      summary: Get a user by username
+      operationId: getUserByUsername
       parameters:
-        - name: userId
+        - name: username
           in: path
           required: true
-          description: ID of the user to retrieve
+          description: Username of the user to retrieve
           schema:
             type: string
       responses:
@@ -104,13 +104,13 @@ paths:
         '404':
           description: User not found
     put:
-      summary: Update a user by ID
+      summary: Update a user by username
       operationId: updateUser
       parameters:
-        - name: userId
+        - name: username
           in: path
           required: true
-          description: ID of the user to update
+          description: Username of the user to update
           schema:
             type: string
       requestBody:
@@ -130,13 +130,13 @@ paths:
         '404':
           description: User not found
     delete:
-      summary: Delete a user by ID
+      summary: Delete a user by username
       operationId: deleteUser
       parameters:
-        - name: userId
+        - name: username
           in: path
           required: true
-          description: ID of the user to delete
+          description: Username of the user to delete
           schema:
             type: string
       responses:
@@ -150,14 +150,14 @@ components:
     User:
       type: object
       properties:
-        id:
+        _id:
           type: string
         username:
           type: string
         email:
           type: string
       required:
-        - id
+        - _id
         - username
         - email
 
